--- a/style.css
+++ b/style.css
@@ -89,3 +89,19 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: normal;
+  }
+
+  h2 {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  p {
+    text-align: center;
+  }
+}
